tests/semantic/case_err3.expected

Semantic Error [line 11]: value: "1"
	Duplicate case detected. All cases must be unique.
