tests/semantic/case_err3.mtp
(*Try duplicate case values*)
var a, b : integer;


begin

	case a + b of
	1:
		a := b
	;
	1:
		b := a
	end


end.